<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="39dp"
        android:text="@string/telefono"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/txtApellido"
        android:ems="10"
        android:inputType="phone" >        
    </EditText>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/txtTelefono"
        android:layout_alignRight="@+id/txtTelefono"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enviar"
        android:layout_alignBottom="@+id/enviar"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_marginRight="37dp"
        android:text="@string/limpiar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignTop="@+id/txtApellido"
        android:text="@string/apellido"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNombre"
        android:layout_below="@+id/txtNombre"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextView01"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPersonName" />
		<requestFocus />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/txtTelefono"
        android:layout_marginTop="34dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView05"
        android:layout_below="@+id/TextView05"
        android:layout_marginTop="14dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/resultNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_marginLeft="14dp"
        android:text="@string/resultNombre" />

    <TextView
        android:id="@+id/resultApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView04"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_alignLeft="@+id/resultNombre"
        android:text="@string/resultApellido" />

    <TextView
        android:id="@+id/resultTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView05"
        android:layout_alignBottom="@+id/TextView05"
        android:layout_alignLeft="@+id/resultApellido"
        android:text="@string/resultTelefono" />

    <TextView
        android:id="@+id/resultEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView06"
        android:layout_alignLeft="@+id/resultTelefono"
        android:layout_alignRight="@+id/resultTelefono"
        android:layout_alignTop="@+id/TextView06"
        android:maxWidth="@dimen/activity_horizontal_margin"
        android:text="@string/resultEmail"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/enviar" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limpiar"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/TextView05"
        android:text="@string/resultado"
        android:textColor="#F05656" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textViewResultado"
        android:layout_marginTop="15dp"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="15dp"
        android:text="@string/apellido"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView04"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/resultNombre"
        android:text="@string/telefono"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>